--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,10 @@
 html, body {
-	background: -webkit-linear-gradient(left top, #E4E1D6 , #D16813); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #E4E1D6, #D16813); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #E4E1D6, #D16813); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #E4E1D6 , #D16813); /* Standard syntax */
-   	background-repeat:no-repeat;
+	background: #333 url('../images/backgrounds/ZQLogo_Blue_light.jpg') center 75% no-repeat; 
+	/*background: -webkit-linear-gradient(left top, #E4E1D6 , #D16813);*/ /* For Safari 5.1 to 6.0 */
+    /*background: -o-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Opera 11.1 to 12.0 */
+    /*background: -moz-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Firefox 3.6 to 15 */
+    /*background: linear-gradient(to bottom right, #E4E1D6 , #D16813);*/ /* Standard syntax */
+   	/*background-repeat:no-repeat;*/
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
@@ -13,6 +14,11 @@ html, body {
    	height: 100%;
   	overflow-x: hidden !important;
 }
+
+/*body {
+	background-image: #60646C url("../images/BeachShell.jpg") center 75% no-repeat;
+}*/
+
 .fill { 
     min-height: 100%;
 }
@@ -48,14 +54,16 @@ html, body {
 	display: inline-block;
 	margin-right: 5px;
 	min-width: 50px;
-	outline: none;
+	outline: 1px;
 	position: relative;
 	text-decoration: none;
 }
 
 #altChords .active{
 	background: #DA9223;
-	color: #fff;	
+	color: #fff;
+	border-color: #000;
+
 }
 
 #altChords ul{
@@ -68,6 +76,7 @@ html, body {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
+	/*border-color: #000;*/
 	min-width: 55px;
 	max-width: 65px;
 	padding: 8px;
@@ -450,7 +459,7 @@ html, body {
 
 #tipText {
 	font-size: Medium;
-	color: #333;
+	color: #222;
 	float: left;
 	text-align: left;
 	margin:5px 5px 0px 5px;
