--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,10 @@ html, body {
   	overflow-x: hidden !important;
 }
 
+/*body {
+	background-image: #60646C url("../images/BeachShell.jpg") center 75% no-repeat;
+}*/
+
 .fill { 
     min-height: 100%;
 }
@@ -30,7 +34,6 @@ html, body {
     border: 0;
 }
 
-/**--------------CHORDS VIEW------------------**/
 #altChords {
 	background: transparent;
 	text-decoration: none;
@@ -47,7 +50,6 @@ html, body {
 	margin:2px;
 	border-top: none;
 }
-
 #altChords a {
 	border-radius: 10px 10px 0px 0px;
 	display: inline-block;
@@ -75,11 +77,13 @@ html, body {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
+	/*border-color: #000;*/
 	min-width: 55px;
 	max-width: 65px;
 	padding: 8px;
 	margin: 2px;
 	text-align: center;
+	position: relative;
 }
 
 #altChords img {
@@ -87,6 +91,7 @@ html, body {
  	width: 100%; /*this makes the image size responsive*/
  	margin:10px;
  	/*vertical-align: center; */
+ 	position: relative;
 }
 	
 #chordNav{
@@ -181,7 +186,7 @@ html, body {
 	position: relative;
 }
 #progChords img {
- 	width: 47%; /*this makes the image size responsive*/
+ 	width: 35%; /*this makes the image size responsive*/
  	margin:2px;
  	
  	/*vertical-align: center;
@@ -195,14 +200,14 @@ html, body {
 }
 
 #progTitle{
-	color: #fff;
+	color: #000;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
 	font-weight: strong;
 	vertical-align: bottom;
-	margin-left:7%;
+	margin-left: 5%;
 	/*margin-right: 25%;*/
-	/*min-width: 350px;*/
+	min-width: 350px;
 	padding: 5px 5px 5px 5px;
 	position: relative;
 }
@@ -211,7 +216,6 @@ html, body {
 #progNav{
 	vertical-align: bottom;
 	margin-left: 15%;
-	margin-top: -2%;
 	/*margin-right: 25%;*/
 	min-width: 400px;
 	padding: 5px 5px 5px 5px;
@@ -252,8 +256,8 @@ html, body {
 	border-radius: 10px 10px 0px 0px;
 	display: inline-block;
 	margin-right: 5px;
-	min-width: 50px;
-	outline: 1px;
+	min-width: 45px;
+	outline: none;
 	position: relative;
 	text-decoration: none;
 }
@@ -273,31 +277,37 @@ html, body {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
-	min-width: 45px;
+	min-width: 65px;
 	max-width: 65px;
 	padding: 5px;
-	margin: 2px;
+	margin: 4px;
 	text-align: center;
 	position: relative;
 }
 #patternChords img {
- 	width: 100%; /*this makes the image size responsive*/
- 	margin:10px 10px 0px 10px;
- 	/*vertical-align: center; */
- 	/*position: relative;*/
+ 	width: 80%; /*this makes the image size responsive*/
+ 	margin:2px;
+ 	
+ 	/*vertical-align: center;
+ 	position: relative;*/
+}
+.patternChords img {
+	float: left;
+	height: 20%;
+	width: 20%;
+	position: relative;
 }
 
 #patternTitle{
-	color: #fff;
+	color: #000;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
 	font-weight: strong;
-	/*vertical-align: bottom;*/
-	margin-left: 17%;
+	vertical-align: bottom;
+	margin-left: 12%;
 	/*margin-right: 25%;*/
-	/*min-width: 350px;*/
+	min-width: 350px;
 	padding: 5px 5px 5px 5px;
-	margin-bottom: 0%;
 	position: relative;
 }
 
@@ -306,7 +316,11 @@ html, body {
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
 	font-weight: strong;
-	padding: 5px 5px 5px 7px;
+	vertical-align: bottom;
+	margin-left: 10%;
+	/*margin-right: 25%;*/
+	min-width: 65px;
+	padding: 5px 5px 5px 5px;
 	position: relative;
 }
 
@@ -314,7 +328,6 @@ html, body {
 #patternNav{
 	vertical-align: bottom;
 	margin-left: 15%;
-	margin-top: -2%;
 	/*margin-right: 25%;*/
 	min-width: 400px;
 	padding: 5px 5px 5px 5px;
@@ -433,13 +446,6 @@ html, body {
 	max-width: 200px;
 }
 
-#tips .title{
-	margin: 0px;
-	padding: 0px;
-	text-align: left;
-	width:100%;
-}
-
 #tipTitle {
 	color: #fff;
 	font-size: 30px;
@@ -460,7 +466,17 @@ html, body {
 	margin:5px 5px 0px 5px;
 }
 
-/**--------------THEMES VIEW------------------**/
+/* currebtly superceded by tips .btn-primary above so this really has litle effect */
+#NextBackBtn {
+	font-size:large; 
+	float: right;
+	margin: 0px;
+	padding: 5px;
+	vertical-align: top;
+	color: #333;	
+}
+
+/*--themes--**/
 #themes .panel-heading{
 	background-color: #DA9223;
 	border-color: #DA9223;
@@ -469,6 +485,7 @@ html, body {
     border-color: #DA9223;
     background: rgba(000,000,000);
     background: rgba(000,000,000,0.3);
+    /*background-color: transparent;*/
 }
 
 #themes .caption{
@@ -513,6 +530,7 @@ html, body {
 	font-family: 'Verdana', Sans;
 	font-weight: bold;
 	line-height: 40px;
+	/*float: right; */
 	text-align: center;
 	padding: 0px;
 	margin:5px;
@@ -526,8 +544,6 @@ html, body {
 	margin:5px 5px 0px 5px;
 }
 
-/*----------------------------------**/
-
 /* currebtly superceded by tips .btn-primary above so this really has litle effect */
 #NextBackBtn {
 	font-size:large; 
@@ -538,6 +554,7 @@ html, body {
 	color: #333;	
 }
 
+/*----------------------------------**/
 .paddingBottom{
 	padding-bottom: 100%;
 }
