--- a/css/app_current.css
+++ b/css/app_current.css
@@ -1,5 +1,5 @@
 html, body {
-	background: #333 url('../images/backgrounds/ZQLogo_PuebloClay.jpg') center 75% no-repeat; 
+	background: #333 url('../images/backgrounds/ZQLogo_skyBlueCouds2.jpg') center 75% no-repeat; 
 	/*background: -webkit-linear-gradient(left top, #E4E1D6 , #D16813);*/ /* For Safari 5.1 to 6.0 */
     /*background: -o-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Opera 11.1 to 12.0 */
     /*background: -moz-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Firefox 3.6 to 15 */
@@ -59,8 +59,8 @@ html, body {
 }
 
 #altChords .active{
-	background: #fff;
-	color: #000;
+	background: #DA9223;
+	color: #fff;
 	border-color: #000;
 
 }
@@ -72,8 +72,8 @@ html, body {
 }
 
 #altChords li a {
-	background: rgba(111,111,111,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	border-radius: 30px;
 	min-width: 55px;
 	max-width: 65px;
@@ -99,8 +99,8 @@ html, body {
 }
 
 #chordNav a{
-	background: rgba(055,055,055,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	min-width: 30px;
 	text-align: center;
 	padding: 5px 65% 5px 65%;
@@ -114,8 +114,8 @@ html, body {
 }
 
 #sharpFlatNav a{
-	background: rgba(075,075,075,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	text-align: center;
 	border-radius: 30px;
 	float: center;
@@ -159,8 +159,8 @@ html, body {
 }
 
 #progChords .active{
-	background: #fff;
-	color: #000;	
+	background: #DA9223;
+	color: #fff;	
 }
 
 #progChords ul{
@@ -170,8 +170,8 @@ html, body {
 }
 
 #progChords li a {
-	background: rgba(111,111,111,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	border-radius: 30px;
 	min-width: 65px;
 	max-width: 65px;
@@ -181,7 +181,7 @@ html, body {
 	position: relative;
 }
 #progChords img {
- 	width: 35%; /*this makes the image size responsive*/
+ 	width: 47%; /*this makes the image size responsive*/
  	margin:2px;
  	
  	/*vertical-align: center;
@@ -220,8 +220,8 @@ html, body {
 
 
 #progNav a{
-	background: rgba(055,055,055,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	min-width: 30px;
 	text-align: center;
 	padding: 5px 65% 5px 65%;
@@ -259,8 +259,8 @@ html, body {
 }
 
 #patternChords .active{
-	background: #fff;
-	color: #000;	
+	background: #DA9223;
+	color: #fff;	
 }
 
 #patternChords ul{
@@ -270,8 +270,8 @@ html, body {
 }
 
 #patternChords li a {
-	background: rgba(111,111,111,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	border-radius: 30px;
 	min-width: 45px;
 	max-width: 65px;
@@ -288,7 +288,7 @@ html, body {
 }
 
 #patternTitle{
-	color: #000;
+	color: #fff;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
 	font-weight: strong;
@@ -322,8 +322,8 @@ html, body {
 }
 
 #patternNav a{
-	background: rgba(055,055,055,0.9);
-	color: #fff;
+	background: #F4E0CB;
+	color: #CF6314;
 	min-width: 30px;
 	text-align: center;
 	padding: 5px 65% 5px 65%;
@@ -352,20 +352,19 @@ html, body {
 	padding-top: 250%;
 }
 #mainView li a {
-	background: rgba(111,111,111,0.9);
-	border-color: rgba(111,111,111,0.9);
+	background: #F4E0CB;
 	box-shadow: 0 3px 0 rgba(0,0,0,0.1);
-	color: #fff;
-	line-height: 75px;
+	color: #CF6314;
+	line-height: 50px;
 	border-radius: 30px;
-	padding: 55px 400px 55px 25px;
-	margin: 25px;
+	padding: 10px 400px 10px 10px;
+	margin: 10px;
 	text-align: center;
 	position: relative;
 	text-decoration: none;
 }
 #mainView .active{
-	background: rgba(000,000,000,0.9);
+	background: #DA9223;
 	color: #fff;	
 }
 #mainView .logo{
@@ -401,24 +400,22 @@ html, body {
 /**--------------TIP VIEW------------------**/
 
 #tips .panel-heading{
-	background: rgba(111,111,111,0.9);
-	border-style: none;
-	/*border-color: #111;*/
+	background-color: #DA9223;
+	border-color: #DA9223;
 }
 #tips .panel, .panel-primary, .route-blurb-container {
-	border-style: none;
-	/*border-color: #111;*/
+	border-color: #DA9223;
 
 }
 #tips .btn-primary{
-	background: rgba(111,111,111,0.9);
-	/*border-color: #111;*/
-	border-style: none;
+	background-color: #DA9223;
+	border-color: #DA9223;
 	margin: 0px 0px 0px 0px;
 }
 
 #tips .btn-primary-nextBack{
-	background: rgba(055,055,055,0.9);
+	background-color: #DA9223;
+	border-color: #DA9223;
 	margin: -20px 0px 10px 0px;
 	color: #fff;
 }
@@ -444,7 +441,7 @@ html, body {
 }
 
 #tipTitle {
-	color: #000;
+	color: #fff;
 	font-size: 30px;
 	font-family: 'Verdana', Sans;
 	font-weight: bold;
@@ -466,11 +463,12 @@ html, body {
 /**--------------THEMES VIEW------------------**/
 #themes .panel-heading{
 	background-color: #DA9223;
-	border-color: #000;
+	border-color: #DA9223;
 }
 #themes .thumbnail{
-    border-color: #000;
-    background: rgba(000,000,000,0.2);
+    border-color: #DA9223;
+    background: rgba(000,000,000);
+    background: rgba(000,000,000,0.3);
 }
 
 #themes .caption{
@@ -487,16 +485,17 @@ html, body {
 }
 
 #themes .btn-primary-nextBack{
-	background: rgba(055,055,055,0.9);
+	background-color: #DA9223;
+	border-color: #DA9223;
 	margin: -20px 0px 10px 0px;
 	color: #fff;
 }
 
 #themes .btn-default{
-	background-color: #fff;
-	border-color: #000;
+	background-color: #222;
+	border-color: #fff;
 	margin: 0px;
-	color: #000;	
+	color: #fff;	
 }
 
 #themes img{
@@ -509,7 +508,7 @@ html, body {
 }
 
 #themeTitle {
-	color: #000;
+	color: #fff;
 	font-size: 30px;
 	font-family: 'Verdana', Sans;
 	font-weight: bold;
@@ -529,7 +528,7 @@ html, body {
 
 /*----------------------------------**/
 
-/* currently superceded by tips .btn-primary above so this really has litle effect */
+/* currebtly superceded by tips .btn-primary above so this really has litle effect */
 #NextBackBtn {
 	font-size:large; 
 	float: right;
