--- a/css/buttons.css
+++ b/css/buttons.css
@@ -38,8 +38,8 @@
 .color-3:hover { background: #5E2750; }
 .color-4 { background: #999999; }
 .color-4:hover { background: #4C4C4C; }
-.color-5 { background: #FF0066; }
-.color-5:hover { background: #CC0052; }
+.color-5 { background: #007ACC; }
+.color-5:hover { background: #005C99; }
 
 .size-1 { font-size:0.6em; }
 .size-2 { font-size:0.9em; }
