fix some css issues

--- a/css/puebloClay.css
+++ b/css/puebloClay.css
@@ -273,9 +273,9 @@ html, body {
 	background: rgba(111,111,111,0.9);
 	color: #fff;
 	border-radius: 30px;
-	min-width: 45px;
+	min-width: 55px;
 	max-width: 65px;
-	padding: 5px;
+	padding: 8px;
 	margin: 2px;
 	text-align: center;
 	position: relative;
@@ -310,7 +310,6 @@ html, body {
 	position: relative;
 }
 
-
 #patternNav{
 	vertical-align: bottom;
 	margin-left: 15%;
@@ -329,7 +328,107 @@ html, body {
 	padding: 5px 65% 5px 65%;
 	border-radius: 100px;
 }
+/**--------------Beats VIEW------------------**/
+#beatsChords {
+	background: transparent;
+	text-decoration: none;
+	border: none;
+	margin-top: -10px;
+}
 
+#beatsChords .panel-body{
+	padding: 0px;
+	margin:2px;
+	border: none;
+}
+
+#beatsChords td{
+	padding: 0px;
+	margin:2px;
+	border-top: none;
+}
+
+#beatsChords a {
+	border-radius: 10px 10px 0px 0px;
+	display: inline-block;
+	margin-right: 5px;
+	min-width: 50px;
+	outline: 1px;
+	position: relative;
+	text-decoration: none;
+}
+
+#beatsChords .active{
+	background: #DA9223;
+	color: #fff;	
+}
+
+#beatsChords ul{
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+}
+
+#beatsChords li a {
+	background: #F4E0CB;
+	color: #CF6314;
+	border-radius: 30px;
+	min-width: 45px;
+	max-width: 65px;
+	padding: 5px;
+	margin: 2px;
+	text-align: center;
+	position: relative;
+}
+#beatsChords img {
+ 	width: 85%; /*this makes the image size responsive*/
+ 	margin:10px 10px 0px 10px;
+ 	/*vertical-align: center; */
+ 	/*position: relative;*/
+}
+
+#beatsTitle{
+	color: #fff;
+	font-size: 20px;
+	font-family: 'Verdana', Sans;
+	font-weight: strong;
+	/*vertical-align: bottom;*/
+	margin-left: 17%;
+	/*margin-right: 25%;*/
+	/*min-width: 350px;*/
+	padding: 5px 5px 5px 5px;
+	margin-bottom: 0%;
+	position: relative;
+}
+
+#beatsHdr{
+	color: #000;
+	font-size: 20px;
+	font-family: 'Verdana', Sans;
+	font-weight: strong;
+	padding: 5px 5px 5px 7px;
+	position: relative;
+}
+
+
+#beatsNav{
+	vertical-align: bottom;
+	margin-left: 15%;
+	margin-top: -2%;
+	/*margin-right: 25%;*/
+	min-width: 400px;
+	padding: 5px 5px 5px 5px;
+	position: relative;
+}
+
+#beatsNav a{
+	background: #F4E0CB;
+	color: #CF6314;
+	min-width: 30px;
+	text-align: center;
+	padding: 5px 65% 5px 65%;
+	border-radius: 100px;
+}
 /**--------------MAIN VIEW------------------**/
 #mainView {
 	
