--- a/css/app.css
+++ b/css/app.css
@@ -273,9 +273,9 @@ html, body {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
-	min-width: 45px;
+	min-width: 55px;
 	max-width: 65px;
-	padding: 5px;
+	padding: 8px;
 	margin: 2px;
 	text-align: center;
 	position: relative;
@@ -332,26 +332,26 @@ html, body {
 }
 
 /**--------------Beats VIEW------------------**/
-#patternChords {
+#beatsChords {
 	background: transparent;
 	text-decoration: none;
 	border: none;
 	margin-top: -10px;
 }
 
-#patternChords .panel-body{
+#beatsChords .panel-body{
 	padding: 0px;
 	margin:2px;
 	border: none;
 }
 
-#patternChords td{
+#beatsChords td{
 	padding: 0px;
 	margin:2px;
 	border-top: none;
 }
 
-#patternChords a {
+#beatsChords a {
 	border-radius: 10px 10px 0px 0px;
 	display: inline-block;
 	margin-right: 5px;
@@ -361,18 +361,18 @@ html, body {
 	text-decoration: none;
 }
 
-#patternChords .active{
+#beatsChords .active{
 	background: #DA9223;
 	color: #fff;	
 }
 
-#patternChords ul{
+#beatsChords ul{
 	list-style-type: none;
 	padding: 0px;
 	margin: 0px;
 }
 
-#patternChords li a {
+#beatsChords li a {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
@@ -383,14 +383,14 @@ html, body {
 	text-align: center;
 	position: relative;
 }
-#patternChords img {
+#beatsChords img {
  	width: 85%; /*this makes the image size responsive*/
  	margin:10px 10px 0px 10px;
  	/*vertical-align: center; */
  	/*position: relative;*/
 }
 
-#patternTitle{
+#beatsTitle{
 	color: #fff;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
@@ -404,7 +404,7 @@ html, body {
 	position: relative;
 }
 
-#patternHdr{
+#beatsHdr{
 	color: #000;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
@@ -414,7 +414,7 @@ html, body {
 }
 
 
-#patternNav{
+#beatsNav{
 	vertical-align: bottom;
 	margin-left: 15%;
 	margin-top: -2%;
@@ -424,7 +424,7 @@ html, body {
 	position: relative;
 }
 
-#patternNav a{
+#beatsNav a{
 	background: #F4E0CB;
 	color: #CF6314;
 	min-width: 30px;
