--- a/css/puebloClay.css
+++ b/css/puebloClay.css
@@ -273,9 +273,9 @@ html, body {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
-	min-width: 55px;
+	min-width: 45px;
 	max-width: 65px;
-	padding: 8px;
+	padding: 5px;
 	margin: 2px;
 	text-align: center;
 	position: relative;
@@ -332,26 +332,26 @@ html, body {
 }
 
 /**--------------Beats VIEW------------------**/
-#beatsChords {
+#patternChords {
 	background: transparent;
 	text-decoration: none;
 	border: none;
 	margin-top: -10px;
 }
 
-#beatsChords .panel-body{
+#patternChords .panel-body{
 	padding: 0px;
 	margin:2px;
 	border: none;
 }
 
-#beatsChords td{
+#patternChords td{
 	padding: 0px;
 	margin:2px;
 	border-top: none;
 }
 
-#beatsChords a {
+#patternChords a {
 	border-radius: 10px 10px 0px 0px;
 	display: inline-block;
 	margin-right: 5px;
@@ -361,18 +361,18 @@ html, body {
 	text-decoration: none;
 }
 
-#beatsChords .active{
+#patternChords .active{
 	background: #DA9223;
 	color: #fff;	
 }
 
-#beatsChords ul{
+#patternChords ul{
 	list-style-type: none;
 	padding: 0px;
 	margin: 0px;
 }
 
-#beatsChords li a {
+#patternChords li a {
 	background: #F4E0CB;
 	color: #CF6314;
 	border-radius: 30px;
@@ -383,14 +383,14 @@ html, body {
 	text-align: center;
 	position: relative;
 }
-#beatsChords img {
+#patternChords img {
  	width: 85%; /*this makes the image size responsive*/
  	margin:10px 10px 0px 10px;
  	/*vertical-align: center; */
  	/*position: relative;*/
 }
 
-#beatsTitle{
+#patternTitle{
 	color: #fff;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
@@ -404,7 +404,7 @@ html, body {
 	position: relative;
 }
 
-#beatsHdr{
+#patternHdr{
 	color: #000;
 	font-size: 20px;
 	font-family: 'Verdana', Sans;
@@ -414,7 +414,7 @@ html, body {
 }
 
 
-#beatsNav{
+#patternNav{
 	vertical-align: bottom;
 	margin-left: 15%;
 	margin-top: -2%;
@@ -424,7 +424,7 @@ html, body {
 	position: relative;
 }
 
-#beatsNav a{
+#patternNav a{
 	background: #F4E0CB;
 	color: #CF6314;
 	min-width: 30px;
@@ -564,25 +564,21 @@ html, body {
 
 #tips .panel-heading{
 	background-color: #DA9223;
-	border-color: #DA9223;
+	/*border-color: #DA9223;*/
 }
 #tips .panel, .panel-primary, .route-blurb-container {
-	border-color: #DA9223;
+	/*border-color: #DA9223;*/
 
 }
 #tips .btn-primary{
 	background-color: #DA9223;
-	border-color: #DA9223;
+	color: #fff;
 	margin: 0px 0px 0px 0px;
-}
-#tips .btn:focus {
-  outline: none;
-  box-shadow: none;
 }
 
 #tips .btn-primary-nextBack{
 	background-color: #DA9223;
-	border-color: #DA9223;
+	/*border-color: #DA9223;*/
 	margin: -20px 0px 10px 0px;
 	color: #fff;
 }
@@ -594,7 +590,7 @@ html, body {
 
 #tips img{
 	float: right;
-	width:65%; 
+	width:50%; 
 	margin: 10px;
 	padding: 0px;
 	max-width: 200px;
@@ -621,7 +617,7 @@ html, body {
 
 #tipText {
 	font-size: Medium;
-	color: #222;
+	color: #000;
 	float: left;
 	text-align: left;
 	margin:5px 5px 0px 5px;
