--- a/css/stageRight.css
+++ b/css/stageRight.css
@@ -617,7 +617,7 @@ html, body {
 
 #tipText {
 	font-size: Medium;
-	color: #222;
+	color: #fff;
 	float: left;
 	text-align: left;
 	margin:5px 5px 0px 5px;
