--- a/css/sunSet.css
+++ b/css/sunSet.css
@@ -91,7 +91,7 @@ html, body {
 	
 #chordNav{
 	vertical-align: bottom;
-	margin-left: 15%;
+	/*margin-left: 15%;*/
 	/*margin-right: 25%;*/
 	min-width: 400px;
 	padding: 5px 5px 5px 5px;
@@ -207,12 +207,11 @@ html, body {
 	position: relative;
 }
 
-
+/*
 #progNav{
 	vertical-align: bottom;
 	margin-left: 15%;
 	margin-top: -2%;
-	/*margin-right: 25%;*/
 	min-width: 400px;
 	padding: 5px 5px 5px 5px;
 	position: relative;
@@ -227,7 +226,23 @@ html, body {
 	padding: 5px 65% 5px 65%;
 	border-radius: 100px;
 }
+*/
 
+#progNav{
+	vertical-align: bottom;
+	min-width: 400px;
+	padding: 5px 5px 5px 5px;
+	position: relative;
+}
+
+#progNav a{
+	background: #F4E0CB;
+	color: #CF6314;
+	min-width: 30px;
+	text-align: center;
+	padding: 5px 65% 5px 65%;
+	border-radius: 100px;
+}
 /**--------------IMPROV PATTERN VIEW------------------**/
 #patternChords {
 	background: transparent;
@@ -311,12 +326,9 @@ html, body {
 	position: relative;
 }
 
-
+/*
 #patternNav{
 	vertical-align: bottom;
-	margin-left: 15%;
-	margin-top: -2%;
-	/*margin-right: 25%;*/
 	min-width: 400px;
 	padding: 5px 5px 5px 5px;
 	position: relative;
@@ -330,7 +342,23 @@ html, body {
 	padding: 5px 65% 5px 65%;
 	border-radius: 100px;
 }
+*/
 
+#patternNav{
+	vertical-align: bottom;
+	min-width: 400px;
+	padding: 5px 5px 5px 5px;
+	position: relative;
+}
+
+#patternNav a{
+	background: #F4E0CB;
+	color: #CF6314;
+	min-width: 30px;
+	text-align: center;
+	padding: 5px 65% 5px 65%;
+	border-radius: 100px;
+}
 /**--------------Beats VIEW------------------**/
 #patternChords {
 	background: transparent;
