--- a/css/app.css
+++ b/css/app.css
@@ -654,7 +654,7 @@ html, body {
 
 #tipText {
 	font-size: Medium;
-	color: #FF9933;
+	color: #222;
 	float: left;
 	text-align: left;
 	margin:5px 5px 0px 5px;
